--- a/project/hopital_project/src/pages/AdminUI/HomeAdmin.module.css
+++ b/project/hopital_project/src/pages/AdminUI/HomeAdmin.module.css
@@ -34,7 +34,7 @@ html, body {
 
 .leftMenu
 {
-    position: relative; /* bắt buộc để đặt nút đóng mở bên trong*/
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -82,9 +82,9 @@ html, body {
     font-size: large;
     font-weight: 800;
     padding: 0px;
+    
 }
 
-/*button đóng mở*/
 .leftMenu h3
 {
     margin-bottom: 50px;
@@ -175,4 +175,21 @@ html, body {
 .buttonMainActive
 {
     background-color: rgb(3, 79, 107) ;
+}
+
+
+.imageHome {
+    margin-top: 40px;
+    width: 100%;
+    height: 400px;           /* chỉnh tùy ý: 300–600px */
+    object-fit: cover;       /* làm ảnh căng đẹp, không méo */
+    border-radius: 16px;     /* bo góc mềm */
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);  /* đổ bóng nhẹ */
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+/* hiệu ứng hover */
+.imageHome:hover {
+    transform: scale(1.02);
+    box-shadow: 0 6px 26px rgba(0, 0, 0, 0.25);
 }
